--- a/package.json
+++ b/package.json
@@ -31,3 +31,14 @@
     "vite": "^5.0.8"
   }
 }
+
+{
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit",
+    "deploy:esa": "esa deploy --config esa.config.js"
+  }
+}
